--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,12 +1,10 @@
 .home-navbar {
   width: 100%;
-  min-height: 80vh;
+  min-height: 80%;
   padding: 30px 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("/public/img/background.jpg");
+
   background-size: cover;
-  background-position: center;
-  color: white;
+  background-position: bottom;
 }
 
 .home-navbar .navbar-container {
@@ -84,7 +82,6 @@
 .logo-frame {
   width: 300px;
   height: 250px;
-  /* background-color: #fff; */
   border-radius: 12px;
   display: flex;
   justify-content: center;
@@ -117,7 +114,6 @@
     justify-content: center;
   }
 }
-
 /* Other navbar */
 
 .other-navbar {
