--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -121,7 +121,7 @@
   min-height: 40vh;
   padding: 30px 0;
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   color: white;
 }
 
